--- a/HabitTrackerApplication/webui/habit_tracker_application/package.json
+++ b/HabitTrackerApplication/webui/habit_tracker_application/package.json
@@ -18,6 +18,7 @@
     "highcharts-vue": "^2.0.1",
     "jquery": "^3.7.1",
     "pinia": "^2.2.5",
+    "popper.js": "^1.16.1",
     "vue": "^3.2.13",
     "vue-highcharts": "^0.2.0",
     "vue-router": "^4.4.5",
