--- a/HabitTrackerApplication/webui/habit_tracker_application/package.json
+++ b/HabitTrackerApplication/webui/habit_tracker_application/package.json
@@ -9,17 +9,24 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "@fullcalendar/vue3": "^6.1.15",
     "apexcharts": "^4.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "chart.js": "^4.4.6",
     "core-js": "^3.8.3",
+    "fullcalendar": "^3.10.5",
     "highcharts": "^11.4.8",
     "highcharts-vue": "^2.0.1",
     "jquery": "^3.7.1",
     "pinia": "^2.2.5",
     "popper.js": "^1.16.1",
     "vue": "^3.2.13",
+    "vue-cal": "^4.10.0",
     "vue-highcharts": "^0.2.0",
     "vue-router": "^4.4.5",
     "vue3-highcharts": "^0.1.3",
