--- a/HabitTrackerApplication/webui/habit_tracker_application/package.json
+++ b/HabitTrackerApplication/webui/habit_tracker_application/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "@fullcalendar/vue3": "^6.1.15",
+    "@popperjs/core": "^2.11.8",
     "apexcharts": "^4.0.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
@@ -22,10 +23,10 @@
     "flatpickr": "^4.6.13",
     "fullcalendar": "^3.10.5",
     "highcharts": "^11.4.8",
-    "highcharts-vue": "^2.0.1",
     "jquery": "^3.7.1",
     "pinia": "^2.2.5",
     "popper.js": "^1.16.1",
+    "v-calendar": "^3.1.2",
     "vue": "^3.2.13",
     "vue-cal": "^4.10.0",
     "vue-highcharts": "^0.2.0",
